--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>css画哆啦A梦</title>
   <link rel="stylesheet" href="./css/default.css">
-  <script src="./node_modules/jquery/dist/jquery.min.js"></script>
+  <script src="./vendor/jquery.min.js"></script>
   <style id="styleTag"></style>
 </head>
 <body>
