增加了用scss写的背景动画

--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
   <title>css画哆啦A梦</title>
   <link rel="stylesheet" href="./css/default.css">
   <link rel="stylesheet" href="./vendor/prism.css">
+  <link rel="stylesheet" href="./css/star.css">
   <script src="./vendor/jquery.min.js"></script>
   <style id="styleTag"></style>
 </head>
 <body>
-  
+  <div id='stars'></div>
+  <div id='stars2'></div>
+  <div id='stars3'></div>
   <div class="doraemon" id="doraemon">
     <div class="speed">
       <button data-id="60">慢速</button>
