--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh-Hans">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,52 +12,59 @@
   <script src="./vendor/jquery.min.js"></script>
   <style id="styleTag"></style>
 </head>
+
 <body>
   <div id='stars'></div>
   <div id='stars2'></div>
   <div id='stars3'></div>
-  <div class="doraemon" id="doraemon">
-    <div class="speed">
-      <button data-id="60">慢速</button>
-      <button data-id="20">中速</button>
-      <button data-id="1">快速</button>
-      <button data-id="skip">跳过</button>
-    </div>
-    <header>
-      <div class="face">
-        <div class="left_eye"></div>
-        <div class="right_eye"></div>
-        <div class="nose"></div>
-        <div class="left_whiskers"></div>
-        <div class="right_whiskers"></div>
-        <div class="mouth"></div>
+  <div id="codeWrapper">
+    <pre id="code"></pre>
+  </div>
+  <div id="paper">
+    <div class="doraemon" id="doraemon">
+      <div class="speed">
+        <button data-id="60">慢速</button>
+        <button data-id="20">中速</button>
+        <button data-id="1">快速</button>
+        <button data-id="skip">跳过</button>
       </div>
-    </header>
-    <div class="body">
-      <div class="left_arm">
-        <div class="left_hand"></div>
+      <header>
+        <div class="face">
+          <div class="left_eye"></div>
+          <div class="right_eye"></div>
+          <div class="nose"></div>
+          <div class="left_whiskers"></div>
+          <div class="right_whiskers"></div>
+          <div class="mouth"></div>
+        </div>
+      </header>
+      <div class="body">
+        <div class="left_arm">
+          <div class="left_hand"></div>
+        </div>
+        <div class="right_arm">
+          <div class="right_hand"></div>
+        </div>
+        <div class="clothes">
+          <div class="pocket"></div>
+        </div>
+        <div class="left_foot"></div>
+        <div class="right_foot"></div>
       </div>
-      <div class="right_arm">
-        <div class="right_hand"></div>
+      <div class="necklet"></div>
+      <div class="bell">
+        <div class="bell_light"></div>
+        <div class="bell_line"></div>
+        <div class="bell_circle"></div>
+        <div class="bell_chink"></div>
       </div>
-      <div class="clothes">
-        <div class="pocket"></div>
-      </div>	
-      <div class="left_foot"></div>
-      <div class="right_foot"></div>
-    </div>
-    <div class="necklet"></div>
-    <div class="bell">
-      <div class="bell_light"></div>
-      <div class="bell_line"></div>
-      <div class="bell_circle"></div>
-      <div class="bell_chink"></div>
     </div>
   </div>
-  <div class="codeWrapper">
-    <pre class="code" id ="code"></pre>
-  </div>
+  
+
+
   <script src="./js/index.js"></script>
   <script src="./vendor/prism.js"></script>
 </body>
+
 </html>
