--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 </head>
 
 <body>
+
+
   <div id='stars'></div>
   <div id='stars2'></div>
   <div id='stars3'></div>
@@ -22,12 +24,6 @@
   </div>
   <div id="paper">
     <div class="doraemon" id="doraemon">
-      <div class="speed">
-        <button data-id="60">慢速</button>
-        <button data-id="20">中速</button>
-        <button data-id="1">快速</button>
-        <button data-id="skip">跳过</button>
-      </div>
       <header>
         <div class="face">
           <div class="left_eye"></div>
@@ -60,9 +56,15 @@
       </div>
     </div>
   </div>
+  <div class="speed">
+    <div class="wrapper">
+      <button data-id="60">慢速</button>
+      <button data-id="30">中速</button>
+      <button data-id="0">快速</button>
+      <button data-id="skip">跳过</button>
+    </div>
+  </div>
   
-
-
   <script src="./js/index.js"></script>
   <script src="./vendor/prism.js"></script>
 </body>
